Add WebAPI activities package and update other project packages

--- a/CommitTrackerDispatcher/project.json
+++ b/CommitTrackerDispatcher/project.json
@@ -3,9 +3,10 @@
   "description": "A dispatcher process to pull repositories from a given organization and add them to a queue.",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.9.5]",
-    "UiPath.System.Activities": "[20.10.4]",
-    "UiPath.UIAutomation.Activities": "[20.10.9]"
+    "UiPath.Excel.Activities": "[2.12.3]",
+    "UiPath.System.Activities": "[22.4.1]",
+    "UiPath.UIAutomation.Activities": "[22.4.5]",
+    "UiPath.WebAPI.Activities": "[1.11.1]"
   },
   "webServices": [],
   "entitiesStores": [],
