--- a/CommitTrackerPerformer/project.json
+++ b/CommitTrackerPerformer/project.json
@@ -6,7 +6,8 @@
     "UiPath.Excel.Activities": "[2.12.3]",
     "UiPath.System.Activities": "[22.4.1]",
     "UiPath.UIAutomation.Activities": "[22.4.5]",
-    "UiPath.WebAPI.Activities": "[1.11.1]"
+    "UiPath.WebAPI.Activities": "[1.11.1]",
+    "UiPath.Word.Activities": "[1.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
